Fix the space below. it wasn't visible after page refresh.

--- a/src/RX.Nyss.Web/ClientApp/src/components/forms/RadioGroupField.module.scss
+++ b/src/RX.Nyss.Web/ClientApp/src/components/forms/RadioGroupField.module.scss
@@ -3,5 +3,5 @@
 }
 
 .label {
-  padding-bottom: 8px;
+  margin-bottom: 8px !important;
 }
